manifests/dev/harbor/NetworkPolicy-harbor-trivy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: trivy
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: harbor-24.6.0
  name: harbor-trivy
  namespace: harbor
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
  podSelector:
    matchLabels:
      app.kubernetes.io/component: trivy
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: harbor
  policyTypes:
    - Ingress
    - Egress
